--- a/_notes/v3-v4.md
+++ b/_notes/v3-v4.md
@@ -1,3 +1,6 @@
+## Migrating from v2/v3 to v4
+https://github.com/ReactTraining/react-router/blob/25776d4dc89b8fb2f575884749766355992116b5/packages/react-router/docs/guides/migrating.md#the-router
+
 ## V3
 ```
 import { Router, Route, IndexRoute, browserHistory } from 'react-router';
@@ -15,6 +18,11 @@ import { Router, Route, IndexRoute, browserHistory } from 'react-router';
 ```
 
 ## V4
+react-router-4 has changed in that it no longer has children. However, with the Route component you can render anything that matches the path.
+
+no IndexRoute any more
+
+
 ```
 import { BrowserRouter, Route } from 'react-router-dom';
 
