--- a/_notes/v3-v4.md
+++ b/_notes/v3-v4.md
@@ -36,3 +36,6 @@ import { BrowserRouter, Route } from 'react-router-dom';
   </div>
 </BrowserRouter>
 ```
+
+## borwserHistory.push()
+https://stackoverflow.com/questions/42701129/how-to-push-to-history-in-react-router-v4
